fixed some codingstyle

--- a/trip.html
+++ b/trip.html
@@ -340,9 +340,9 @@
         <input id="flughafentransfer" type="checkbox" name="zusatzleistungen[]"
                value="flughafentransfer">
         <label for="flughafentransfer">Flughafentransfer</label>
-        <input id="zusatz_gepäck" type="checkbox" name="zusatzleistungen[]"
-               value="zusatz_gepäck">
-        <label for="zusatz_gepäck">Zusatz Gepäck</label>
+        <input id="zusatz_gepaeck" type="checkbox" name="zusatzleistungen[]"
+               value="zusatz_gepaeck">
+        <label for="zusatz_gepaeck">Zusatz Gepäck</label>
     </fieldset>
     <fieldset>
         <legend>
@@ -423,7 +423,7 @@
         <input type="search" list="reisezielliste" id="reiseziele"
                name="Reiseziele">
         <datalist id="reisezielliste">
-            <option value="Grossmünster"></option>
+            <option value="Grossmuenster"></option>
             <option value="Hallenstadion"></option>
             <option value="Zürich Hauptbahnhof"></option>
             <option value="Bundeshaus"></option>
