fixed some codestyle stuff

--- a/trip.html
+++ b/trip.html
@@ -340,7 +340,7 @@
         <input id="flughafentransfer" type="checkbox" name="zusatzleistungen[]"
                value="flughafentransfer">
         <label for="flughafentransfer">Flughafentransfer</label>
-        <input id="zusatz_gepaeck" type="checkbox" name="zusatzleistungen[]"
+        <input type="checkbox" id="zusatz_gepaeck" name="zusatzleistungen[]"
                value="zusatz_gepaeck">
         <label for="zusatz_gepaeck">Zusatz Gepäck</label>
     </fieldset>
@@ -401,14 +401,14 @@
         <legend>
             Airline Zusatzleistungen
         </legend>
-        <input id="priority_check_in" type="checkbox"
+        <input type="checkbox" id="priority_check_in"
                name="air_zusatzleistungen[]"
                value="Priority Check-In">
         <label for="priority_check_in">Priority Check-In</label>
-        <input id="zusatz_handgepäck" type="checkbox"
+        <input type="checkbox" id="zusatz_handgepaeck"
                name="air_zusatzleistungen[]"
-               value="zusatz_handgepäck">
-        <label for="zusatz_handgepäck">Zusätzliches Handgepäck</label>
+               value="zusatz_handgepaeck">
+        <label for="zusatz_handgepaeck">Zusätzliches Handgepäck</label>
         <input id="mietwagen" type="checkbox" name="air_zusatzleistungen[]"
                value="mietwagen">
         <label for="mietwagen">Mietwagen</label>
@@ -425,7 +425,7 @@
         <datalist id="reisezielliste">
             <option value="Grossmuenster"></option>
             <option value="Hallenstadion"></option>
-            <option value="Zürich Hauptbahnhof"></option>
+            <option value="Zuerich Hauptbahnhof"></option>
             <option value="Bundeshaus"></option>
             <option value="Bodensee"></option>
             <option value="Genfer See"></option>
