--- a/trip.html
+++ b/trip.html
@@ -340,9 +340,9 @@
         <input id="flughafentransfer" type="checkbox" name="zusatzleistungen[]"
                value="flughafentransfer">
         <label for="flughafentransfer">Flughafentransfer</label>
-        <input type="checkbox" id="zusatz_gepaeck" name="zusatzleistungen[]"
-               value="zusatz_gepaeck">
-        <label for="zusatz_gepaeck">Zusatz Gepäck</label>
+        <input type="checkbox" id="zusatz-gepaeck" name="zusatzleistungen[]"
+               value="zusatz-gepaeck">
+        <label for="zusatz-gepaeck">Zusatz Gepäck</label>
     </fieldset>
     <fieldset>
         <legend>
@@ -401,15 +401,15 @@
         <legend>
             Airline Zusatzleistungen
         </legend>
-        <input type="checkbox" id="priority_check_in"
-               name="air_zusatzleistungen[]"
+        <input type="checkbox" id="priority-check-in"
+               name="air-zusatzleistungen[]"
                value="Priority Check-In">
-        <label for="priority_check_in">Priority Check-In</label>
-        <input type="checkbox" id="zusatz_handgepaeck"
-               name="air_zusatzleistungen[]"
-               value="zusatz_handgepaeck">
-        <label for="zusatz_handgepaeck">Zusätzliches Handgepäck</label>
-        <input id="mietwagen" type="checkbox" name="air_zusatzleistungen[]"
+        <label for="priority-check-in">Priority Check-In</label>
+        <input type="checkbox" id="zusatz-handgepaeck"
+               name="air-zusatzleistungen[]"
+               value="zusatz-handgepaeck">
+        <label for="zusatz-handgepaeck">Zusätzliches Handgepäck</label>
+        <input id="mietwagen" type="checkbox" name="air-zusatzleistungen[]"
                value="mietwagen">
         <label for="mietwagen">Mietwagen</label>
     </fieldset>
